syntax = "proto3";
package io.openlineage.flink.proto.event;
option java_package = "io.openlineage.flink.proto.event";
option java_multiple_files = true;

import "google/protobuf/any.proto";

message ProtobufTestEvent {
  string id = 1;
  int64 version = 2;
  SubProtobufTestEvent subEvent = 3;
  // Oneof fields are like regular fields except all the fields
  // in a oneof share memory, and at most one field can be set at the same time.
  oneof testOneOf {
    string oneOf1 = 4;
    SubProtobufTestEvent oneOf2 = 5;
  }
  google.protobuf.Any testAnyOf = 6;
}

message SubProtobufTestEvent {
  string id = 1;
  SubSubProtobufTestEvent subSubEvent = 2;
  repeated SubSubProtobufTestEvent arr = 3;
  map<string, int32> someMap = 4;
}

message SubSubProtobufTestEvent {
  string id = 1;
  int64 version = 2;
}